[package]
name = "matrix_2d"
version = "0.1.0"
authors = ["jtenner <tenner.joshua@gmail.com>"]
edition = "2018"
description = "A matrix implementation that mimics what the canvas matrix functions do on html5 canvas."
license = "MIT"
documentation = "http://github.com/jtenner/matrix-2d"
homepage = "http://github.com/jtenner/matrix-2d"
categories = ["matrix", "2d", "web", "canvas", "transform"]

[dependencies]
